[package]
name = "bevy-craft-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_mod_picking = "0.5"
futures-lite = "1.12.0"
rand = "0.8.4"
crossbeam-channel = "0.5.2"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"